--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,24 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.inputIcon {
+    height: 1.5rem;
+    width: 1.5rem;
+    padding: 4px;
+    position: absolute;
+    box-sizing: border-box;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+.input {
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    padding-left: 1.5rem;
+    border: 1px solid rgba(255, 255, 255, .2);
+    border-radius: 5px;
+    background: #171717;
+}
