--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,24 @@
   border-radius: 10px;
   transition: width 0.1s linear;
 }
+
+.inputIcon {
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 4px;
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+
+.input {
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+  border: 1px solid rgba(255, 255, 255, .2);
+  border-radius: 5px;
+  background: #171717;
+}
