--- a/src/pages/s_series/style.css
+++ b/src/pages/s_series/style.css
@@ -221,6 +221,64 @@
   transform: translate(-50%, -50%);
 }
 
+.snap-flawless-selfie-section {
+  display: flex;
+  position: relative;
+  margin-top: 0px !important;
+  padding: 120px;
+  width: 100%;
+  height: 800px;
+  background-image: url('../../images/s_series/s_twenty_three_plus/SnapFlawlessSelfie.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.unlock-touch-section {
+  display: flex;
+  position: relative;
+  margin-top: 0px !important;
+  padding: 120px;
+  width: 100%;
+  height: 800px;
+  background-image: url('../../images/s_series/s_twenty_three_plus/UnlockTouch.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.blog-cards-section {
+  position: relative;
+  margin-top: 0px !important;
+  padding: 120px 80px;
+}
+
+.blog-cards-section div:nth-child(2) {
+  background-image: url('../../images/s_series/s_twenty_three_plus/BlogCardsTwo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.blog-cards-section div:nth-child(3) {
+  background-image: url('../../images/s_series/s_twenty_three_plus/BlogCardsThree.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.blog-cards-section div:nth-child(4) {
+  background-image: url('../../images/s_series/s_twenty_three_plus/BlogCardsFour.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
+.blog-cards-section div:nth-child(5) {
+  background-image: url('../../images/s_series/s_twenty_three_plus/BlogCardsFive.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right center;
+}
+
 @media (max-width: 768px) {
   .hero-section {
     display: block;
@@ -262,6 +320,20 @@
     display: block;
     padding: 12px 16px;
     height: 472px;
+  }
+
+  .snap-flawless-selfie-section {
+    padding: 12px 16px;
+    height: 468px;
+  }
+
+  .unlock-touch-section {
+    padding: 12px 16px;
+    height: 465px;
+  }
+
+  .blog-cards-section {
+    padding: 40px 16px;
   }
 
 }
