--- a/public/s_twenty_three_plus/style.css
+++ b/public/s_twenty_three_plus/style.css
@@ -258,6 +258,19 @@
   background-position: center;
 }
 
+.thin-design-section {
+  display: flex;
+  position: relative;
+  margin-top: 0px !important;
+  padding: 120px;
+  width: 100%;
+  height: 800px;
+  background-image: url('./ThinDesign.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
 .blog-cards-section {
   position: relative;
   margin-top: 0px !important;
