--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-
-@layer base {
-  .content{
-    @apply mx-auto max-w-7xl w-full md:w-11/12 text-white;
-  }
-}
-
 .hero-section {
   display: flex;
   position: relative;
@@ -17,7 +5,7 @@
   padding: 0 50px;
   width: 100%;
   height: 800px;
-  background-image: url('./heroBg.png');
+  background-image: url('../public/s_twenty_three_plus/heroBg.png');
   background-size: cover;
   background-position: center;
 }
