--- a/src/index.css
+++ b/src/index.css
@@ -44,13 +44,14 @@
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1px white;
   }
+
   .font-outline-4 {
     -webkit-text-stroke: 4px black;
   }
 }
 
-.swiper-pagination-bullet{
-  background-color: white ;
+.swiper-pagination-bullet {
+  background-color: white;
   color: white;
   opacity: 100;
 }
@@ -95,35 +96,58 @@
   background-repeat: no-repeat;
 }
 
-.StayPlugged h1, .StayPlugged h3, .StayPluggedMobile h1, .StayPluggedMobile h3 {
-white-space: nowrap;
-border-collapse: collapse;
+.StayPlugged h1,
+.StayPlugged h3,
+.StayPluggedMobile h1,
+.StayPluggedMobile h3 {
+  white-space: nowrap;
+  border-collapse: collapse;
 }
 
 .StayPluggedMobile {
-background-image: url('../public/subtract-mobile.png');
-background-size: contain;
-background-position: center;
-background-repeat: no-repeat;
+  background-image: url('../public/subtract-mobile.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .inputIcon {
-height: 1.5rem;
-width: 1.5rem;
-padding: 4px;
-position: absolute;
-box-sizing: border-box;
-top: 50%;
-right: 10px;
-transform: translateY(-50%);
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 4px;
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
 }
 
 .input {
-width: 100%;
-height: 50px;
-box-sizing: border-box;
-padding-left: 1.5rem;
-border: 1px solid rgba(255, 255, 255, .2);
-border-radius: 5px;
-background: #171717;
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+  border: 1px solid rgba(255, 255, 255, .2);
+  border-radius: 5px;
+  background: #171717;
+}
+
+.superguru4g {
+  background: url('/featurephone/superguru4g/shape_3.webp') no-repeat,
+    url('/featurephone/superguru4g/shape_2.webp') no-repeat,
+    url('/featurephone/superguru4g/shape_1.webp') right/25% no-repeat;
+  background-position: top, top 20% left, right bottom 10%;
+  background-size: 45%, 400px, 400px;
+  background-color: #181818;
+}
+
+@media only screen and (max-width: 768px) {
+  .superguru4g {
+    background: url('/featurephone/superguru4g/shape_3.webp') no-repeat,
+      url('/featurephone/superguru4g/shape_2.webp') no-repeat,
+      url('/featurephone/superguru4g/shape_1.webp') no-repeat;
+    background-position: top, top 50% left, right bottom;
+    background-size: 300px, 200px, 150px;
+    background-color: #181818;
+  }
 }
