--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,10 @@ border: 1px solid rgba(255, 255, 255, .2);
 border-radius: 5px;
 background: #171717;
 }
+
+.text-gradient {
+  background: linear-gradient(98.38deg, #08E488 -17.43%, #047E4B 91.28%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
