--- a/src/index.css
+++ b/src/index.css
@@ -202,12 +202,26 @@
   .custom-lg-style {
     width: 278px;
     top: 15rem;
-    }
+  }
 
-  .custom-lg-h1{
+  .custom-lg-h1 {
     font-size: 36px;
     line-height: 41px;
   }
 }
 
+@media (width: 1024px) {
+  .responsive-width {
+    width: 383px !important;
+  }
+}
 
+@media (max-width: 380px) {
+  .responsive-bg {
+    background-size: contain !important;
+  }
+  .responsive-bg-height {
+    height: 383px !important;
+  
+  }
+}
