--- a/src/index.css
+++ b/src/index.css
@@ -237,6 +237,7 @@
   }
 }
 
+
 @media (max-width: 380px) {
   .responsive-bg {
     background-size: 100% 100% !important;
@@ -250,4 +251,19 @@
 
 .navbarmobile::-webkit-scrollbar {
   display: none;
+}
+
+@media (min-width: 430px) and (max-width: 700px) {
+  .responsive-LanguageSection {
+    height: 600px;
+  }
+}
+
+@media (width: 1024px) {
+  .responsive-WhatsappSection{
+    width: 351px !important;
+  }
+  .responsive-WhatsappSection div {
+    padding-inline-start: 37px;
+  }
 }
