--- a/src/style.css
+++ b/src/style.css
@@ -590,3 +590,19 @@
   content: '' !important;
   opacity: 0;
 }
+
+
+@keyframes slideFromBottom {
+  0% {
+      transform: translateY(100%);
+      opacity: 0;
+  }
+  50% {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+.animate-slideFromBottom {
+  animation: slideFromBottom 1s ;
+}
