--- a/src/index.css
+++ b/src/index.css
@@ -310,4 +310,57 @@
   }
 }
 
+@media (max-width: 760px) {
+  .mob-res1 img{
+    height: 150px !important;
+  }
+}
 
+@media (min-width: 444px) {
+  .responsoveCardA05{
+    height: 350px !important;
+  }
+  
+}
+
+@media (max-width: 768px) and (min-width:638px){
+  .responsoveCard1A05 img{
+    height: 467px !important;
+  }
+  
+}
+
+@media (max-width:638px){
+  .responsoveCard1A05 img{
+    height: 366px !important;
+  }
+  
+}
+
+@media (max-width:442px){
+  .responsive-LanguageSection{
+    height: 410px !important;
+  }
+  
+}
+
+
+@media (max-width: 1308px) and (min-width:1023px) {
+  .responsveImg img:nth-of-type(1) {
+    width: 600px !important;
+    top: 3rem !important;
+  }
+  .responsveImg img:nth-of-type(2) {
+    width: 600px !important;
+    left: -17rem;
+  }
+  .responsveImg img:nth-of-type(3) {
+    height: 600px !important;
+    top: 3rem !important;
+    left: 40rem !important;
+  }
+  .responsveImg img:nth-of-type(4) {
+    left: 21rem !important;
+    height: 600px !important;
+  }
+}
