--- a/src/index.css
+++ b/src/index.css
@@ -372,3 +372,16 @@
     height: 600px !important;
   }
 }
+
+/* Themed Scroll Bar */
+body::-webkit-scrollbar {
+  width: 14px;
+}
+body::-webkit-scrollbar-track {
+  background-color: #1a202c;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #ff0037;
+  border: 3px solid #1a202c;
+  border-radius: 7px;
+}
